--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -175,7 +175,7 @@ queue_7 : "\n๏ ᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇ
 queue_8 : "๏ <b>{0} ᴘʟᴀʏᴇʀ</b>\n\n๏ <b>sᴛʀᴇᴀᴍɪɴɢ ➠ </b> {1}\n\n๏ <b>sᴛʀᴇᴀᴍ ᴛʏᴘᴇ ➠ </b> {2}\n๏ <b>ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➠ </b> {3}\n{4}"
 
 stream_1 : "Ⰶ <b>ᴋᴏᴋᴜ ᴍᴜsɪᴄ sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ Ⰶ</b>\n\n<b>๏ ᴛɪᴛʟᴇ ➛ </b> <a href={0}>{1}</a>\n<b>๏ ᴅᴜʀᴀᴛɪᴏɴ ➛ </b> {2} ᴍɪɴᴜᴛᴇs\n<b>๏ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➛ </b> {3}\n\n๏ ᴍᴀᴅᴇ ʙʏ ➛ [ᴋᴏᴋᴜ-ᴜᴘᴅᴀᴛᴇs](https://t.me/Koku_Updates)"
-stream_2 : "Ⰶ <b>ᴋᴏᴋᴜ ᴍᴜsɪᴄ sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ Ⰶ</b>\n\n<b>๏ sᴛʀᴇᴀᴍ ᴛʏᴘᴇ ➛ </b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>๏ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➛ </b> {0}\n\n๏ ᴍᴀᴅᴇ ʙʏ ➛ [ᴋᴏᴋᴜ-ᴜᴘᴅᴀᴛᴇs](https://t.me/Koku_Updates)"
+stream_2 : "Ⰶ <b>ᴋᴏᴋᴜ ᴍᴜsɪᴄ sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ Ⰶ</b>\n\n<b>๏ sᴛʀᴇᴀᴍ ᴛʏᴘᴇ ➛ </b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>๏ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➛ </b> {0}\n\n๏ ᴍᴀᴅᴇ ʙʏ ➛ ᴋᴏᴋᴜ-ᴜᴘᴅᴀᴛᴇs"
 
 
 CLOSE_BUTTON  : "ᴄʟᴏsᴇ"
