--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -200,20 +200,19 @@ str_2 : "๏ ᴠᴀʟɪᴅ sᴛʀᴇᴀᴍ ᴠᴇʀɪғɪᴇᴅ.\n\n๏ ᴘʀᴏ
 str_3 : "๏ ғᴀɪʟᴇᴅ ᴛᴏ sᴛʀᴇᴀᴍ ʏᴏᴜᴛᴜʙᴇ ʟɪᴠᴇ sᴛʀᴇᴀᴍ, ɴᴏ ʟɪᴠᴇ ꜰᴏʀᴍᴀᴛ ꜰᴏᴜɴᴅ."
 
 ping_1 : "๏ {0} ɪs ᴘɪɴɢɪɴɢ..."
-ping_2 : "Ⰶ ᴋᴏᴋᴜ ᴘɪɴɢ ᴩᴏɴɢ ➠ <code>{0}ᴍs</code> Ⰶ\n\n✦ <b>{1} sʏsᴛᴇᴍ sᴛᴀᴛs</b> ✦\n\n๏ ᴜᴩᴛɪᴍᴇ ➠ {2}\n๏ ʀᴀᴍ ➠ {3}\n๏ ᴄᴩᴜ ➠ {4}\n๏ ᴅɪsᴋ ➠ {5}\n๏ ᴩʏ-ᴛɢᴄᴀʟʟs ➠ <code>{6}ᴍs</code>"
+ping_2 : "Ⰶ Gᴀʀᴏᴜ ᴘɪɴɢ ᴩᴏɴɢ ➠ <code>{0}ᴍs</code> Ⰶ\n\n✦ <b>{1} sʏsᴛᴇᴍ sᴛᴀᴛs</b> ✦\n\n๏ ᴜᴩᴛɪᴍᴇ ➠ {2}\n๏ ʀᴀᴍ ➠ {3}\n๏ ᴄᴩᴜ ➠ {4}\n๏ ᴅɪsᴋ ➠ {5}\n๏ ᴩʏ-ᴛɢᴄᴀʟʟs ➠ <code>{6}ᴍs</code>"
 
 queue_1 : "๏ ғᴇᴛᴄʜɪɴɢ ǫᴜᴇᴜᴇ...\n\n๏ ᴘʟᴇᴀsᴇ ᴡᴀɪᴛ..."
 queue_2 : "๏ ǫᴜᴇᴜᴇ ᴇᴍᴘᴛʏ."
 queue_3 : "<u>๏ ᴄʟɪᴄᴋ ʜᴇʀᴇ ᴛᴏ ᴄʜᴇᴄᴋ ᴛʜᴇ ʟɪsᴛ ᴏғ ᴛʜᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋs ➠ </u> <a href={0}>ʜᴇʀᴇ</a>"
-queue_4 : "Ⰶ <b>ᴀᴅᴅᴇᴅ ᴛᴏ ǫᴜᴇᴜᴇ ᴀᴛ ᴋᴏᴋᴜ ᴍᴜsɪᴄ #{0}\n\n๏ ᴛɪᴛʟᴇ ➠ </b> {1}\n<b>๏ ᴅᴜʀᴀᴛɪᴏɴ ➠ </b> {2} ᴍɪɴᴜᴛᴇs\n<b>๏ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➠</b> {3}\n\n๏ ᴍᴀᴅᴇ ʙʏ ➛ Kᴏᴋᴜ-Sᴜᴘᴘᴏʀᴛ"
+queue_4 : "Ⰶ <b>ᴀᴅᴅᴇᴅ ᴛᴏ ǫᴜᴇᴜᴇ ᴀᴛ Gᴀʀᴏᴜ ᴍᴜsɪᴄ #{0}\n\n๏ ᴛɪᴛʟᴇ ➠ </b> {1}\n<b>๏ ᴅᴜʀᴀᴛɪᴏɴ ➠ </b> {2} ᴍɪɴᴜᴛᴇs\n<b>๏ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➠</b> {3}\n\n๏ ᴍᴀᴅᴇ ʙʏ ➛ Gᴀʀᴏᴜ-Sᴜᴘᴘᴏʀᴛ"
 queue_5 : "๏ ᴛʜᴇʀᴇ's ᴏɴʟʏ ᴏɴᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋ ɪɴ ᴘʟᴀʏʟɪsᴛ.\n\n๏ ᴀᴅᴅ ᴍᴏʀᴇ ᴛʀᴀᴄᴋs ᴛᴏ ᴄʜᴇᴄᴋ ʟɪsᴛ."
 queue_6 : "<b>๏ ᴅᴜʀᴀᴛɪᴏɴ ➠ </b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴀᴛɪᴏɴ sᴛʀᴇᴀᴍ\n\n๏ ᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_7 : "\n๏ ᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_8 : "๏ <b>{0} ᴘʟᴀʏᴇʀ</b>\n\n๏ <b>sᴛʀᴇᴀᴍɪɴɢ ➠ </b> {1}\n\n๏ <b>sᴛʀᴇᴀᴍ ᴛʏᴘᴇ ➠ </b> {2}\n๏ <b>ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➠ </b> {3}\n{4}"
 
-stream_1 : "Ⰶ <b>ᴋᴏᴋᴜ ᴍᴜsɪᴄ sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ Ⰶ</b>\n\n<b>๏ ᴛɪᴛʟᴇ ➛ </b> <a href={0}>{1}</a>\n<b>๏ ᴅᴜʀᴀᴛɪᴏɴ ➛ </b> {2} ᴍɪɴᴜᴛᴇs\n<b>๏ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➛ </b> {3}\n\n๏ ᴍᴀᴅᴇ ʙʏ ➛ [ᴋᴏᴋᴜ-ᴜᴘᴅᴀᴛᴇs](https://t.me/Koku_Updates)"
-stream_2 : "Ⰶ <b>ᴋᴏᴋᴜ ᴍᴜsɪᴄ sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ Ⰶ</b>\n\n<b>๏ sᴛʀᴇᴀᴍ ᴛʏᴘᴇ ➛ </b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>๏ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➛ </b> {0}\n\n๏ ᴍᴀᴅᴇ ʙʏ ➛ ᴋᴏᴋᴜ-ᴜᴘᴅᴀᴛᴇs"
-
+stream_1 : "Ⰶ <b>ᴋᴏᴋᴜ ᴍᴜsɪᴄ sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ Ⰶ</b>\n\n<b>๏ ᴛɪᴛʟᴇ ➛ </b> <a href={0}>{1}</a>\n<b>๏ ᴅᴜʀᴀᴛɪᴏɴ ➛ </b> {2} ᴍɪɴᴜᴛᴇs\n<b>๏ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➛ </b> {3}\n\n๏ ᴍᴀᴅᴇ ʙʏ ➛ [Gᴀʀᴏᴜ-ᴜᴘᴅᴀᴛᴇs](https://t.me/Gᴀʀᴏᴜ_updates)"
+stream_2 : "Ⰶ <b>ᴋᴏᴋᴜ ᴍᴜsɪᴄ sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ Ⰶ</b>\n\n<b>๏ sᴛʀᴇᴀᴍ ᴛʏᴘᴇ ➛ </b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>๏ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➛ </b> {0}\n\n๏ ᴍᴀᴅᴇ ʙʏ ➛ Gᴀʀᴏᴜ-ᴜᴘᴅᴀᴛᴇs"
 
 CLOSE_BUTTON  : "ᴄʟᴏsᴇ"
 BACK_BUTTON : "ʙᴀᴄᴋ"
