--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -212,7 +212,7 @@ queue_7 : "\n๏ ᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇ
 queue_8 : "๏ <b>{0} ᴘʟᴀʏᴇʀ</b>\n\n๏ <b>sᴛʀᴇᴀᴍɪɴɢ ➠ </b> {1}\n\n๏ <b>sᴛʀᴇᴀᴍ ᴛʏᴘᴇ ➠ </b> {2}\n๏ <b>ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➠ </b> {3}\n{4}"
 
 stream_1 : "Ⰶ <b>Gᴀʀᴏᴜ ᴍᴜsɪᴄ sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ Ⰶ</b>\n\n<b>๏ ᴛɪᴛʟᴇ ➛ </b> <a href={0}>{1}</a>\n<b>๏ ᴅᴜʀᴀᴛɪᴏɴ ➛ </b> {2} ᴍɪɴᴜᴛᴇs\n<b>๏ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➛ </b> {3}\n\n๏ ᴍᴀᴅᴇ ʙʏ ➛ [Gᴀʀᴏᴜ-ᴜᴘᴅᴀᴛᴇs](https://t.me/garou_updates)"
-stream_2 : "Ⰶ <b>Gᴀʀᴏᴜ ᴍᴜsɪᴄ sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ Ⰶ</b>\n\n<b>๏ sᴛʀᴇᴀᴍ ᴛʏᴘᴇ ➛ </b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>๏ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➛ </b> {0}\n\n๏ ᴍᴀᴅᴇ ʙʏ ➛ Gᴀʀᴏᴜ-ᴜᴘᴅᴀᴛᴇs"
+stream_2 : "Ⰶ <b>Gᴀʀᴏᴜ ᴍᴜsɪᴄ sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ Ⰶ</b>\n\n<b>๏ sᴛʀᴇᴀᴍ ᴛʏᴘᴇ ➛ </b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>๏ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➛ </b> {0}\n\n๏ ᴍᴀᴅᴇ ʙʏ ➛ [Gᴀʀᴏᴜ-ᴜᴘᴅᴀᴛᴇs](https://t.me?garou_updates)"
 
 CLOSE_BUTTON  : "ᴄʟᴏsᴇ"
 BACK_BUTTON : "ʙᴀᴄᴋ"
