--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -84,7 +84,7 @@ admin_38 : "๏ ᴀᴅᴅᴇᴅ 1 ᴜᴘᴠᴏᴛᴇ."
 admin_39 : "๏ ʀᴇᴍᴏᴠᴇᴅ 1 ᴜᴘᴠᴏᴛᴇ."
 admin_40 : "๏ ᴜᴘᴠᴏᴛᴇᴅ."
 
-start_1 : "๏ {0} ɪs ᴀʟɪᴠᴇ ʙᴀʙʏ.\n\n<b>๏ ᴜᴘᴛɪᴍᴇ :</b> {1}"
+start_1 : "๏ {0} ɪs ᴀʟɪᴠᴇ sᴏʟᴅɪᴇʀ.\n\n<b>๏ ᴜᴘᴛɪᴍᴇ :</b> {1}"
 start_2 : "๏ <b>нᴇʏ</b> {0}, ɴɪᴄᴇ ᴛᴏ ᴍᴇᴇᴛ ʏᴏᴜ !</b>\n</b>━━━━━━━━━━━━━━━━━━━━━━</b>\n\n๏ ɪ ᴀᴍ {1} ᴀɴᴅ ɪ ʜᴀᴠᴇ sᴘᴇᴄɪᴀʟ ғᴇᴀᴛᴜʀᴇs.\n\n๏ </b> ᴜsᴇʀs ➛ </b>{6}\n๏ </b> ᴄʜᴀᴛs ➛ </b>{7}\n\n๏ ᴛʜɪs ɪs ᴍᴏsᴛ ᴘᴏᴡᴇʀғᴜʟ ᴍᴜsɪᴄ ʙᴏᴛ, ғᴏʀ ʏᴏᴜʀ ɢʀᴏᴜᴘ/ᴄʜᴀɴɴᴇʟ."
 start_3 : "๏ ʜᴇʏ {0},\n๏ ᴛʜɪs ɪs {1}\n\n๏ ᴛʜᴀɴᴋs ғᴏʀ ᴀᴅᴅɪɴɢ ᴍᴇ ɪɴ {2}, {3} ᴄᴀɴ ɴᴏᴡ ᴩʟᴀʏ sᴏɴɢs ɪɴ ᴛʜɪs ᴄʜᴀᴛ."
 start_4 : "๏ <b>sᴜᴘᴇʀɢʀᴏᴜᴘ ɴᴇᴇᴅᴇᴅ</b> 💌\n\n๏ ᴘʟᴇᴀsᴇ ᴄᴏɴᴠᴇʀᴛ ʏᴏᴜʀ <b>ɢʀᴏᴜᴘ</b> ᴛᴏ <b>sᴜᴘᴇʀɢʀᴏᴜᴘ</b> ᴀɴᴅ ᴛʜᴇɴ ᴀᴅᴅ ᴍᴇ ᴀɢᴀɪɴ.\n\n๏ <b>ʜᴏᴡ ᴛᴏ ᴍᴀᴋᴇ sᴜᴘᴇʀɢʀᴏᴜᴘ ?</b>\n- ᴍᴀᴋᴇ ʏᴏᴜʀ ɢʀᴏᴜᴘ's ᴄʜᴀᴛ ʜɪsᴛᴏʀʏ <b>ᴠɪsɪʙʟᴇ</b> ᴏɴᴄᴇ."
@@ -135,7 +135,7 @@ cplay_5 : "๏ ᴏɴʟʏ ᴄʜᴀɴɴᴇʟs ᴀʀᴇ sᴜᴘᴘᴏʀᴛᴇᴅ."
 cplay_6 : "๏ ʏᴏᴜ ɴᴇᴇᴅ ᴛᴏ ʙᴇ ᴛʜᴇ <b>ᴏᴡɴᴇʀ</b> ᴏғ ᴛʜᴇ ᴄʜᴀɴɴᴇʟ {0} ᴛᴏ ᴄᴏɴɴᴇᴄᴛ ɪᴛ ᴡɪᴛʜ ᴛʜɪs ɢʀᴏᴜᴘ.\n๏ <b>ᴄʜᴀɴɴᴇʟ's ᴏᴡɴᴇʀ ➛</b> @{1}\n\n๏ ᴀʟᴛᴇʀɴᴀᴛɪᴠᴇʟʏ ʏᴏᴜ ᴄᴀɴ ʟɪɴᴋ ʏᴏᴜʀ ɢʀᴏᴜᴘ ᴛᴏ ᴛʜᴀᴛ ᴄʜᴀɴɴᴇʟ ᴀɴᴅ ᴛʜᴇɴ ᴛʀʏ ᴄᴏɴɴɴᴇᴄᴛɪɴɢ ᴡɪᴛʜ <code>/channelplay linked</code>"
 cplay_7 : "๏ ᴄʜᴀɴɴᴇʟ ᴘʟᴀʏ ᴅɪsᴀʙʟᴇᴅ."
 
-play_1 : "🧪"
+play_1 : "🔍"
 play_2 : "<b>๏ ᴄʜᴀɴɴᴇʟ ᴘʟᴀʏ ᴍᴏᴅᴇ</b>\n\n๏ ᴘʀᴏᴄᴇssɪɴɢ, ᴘʟᴇᴀsᴇ ᴡᴀɪᴛ...\n\n<b>๏ ʟɪɴᴋᴇᴅ ᴄʜᴀɴɴᴇʟ ➠</b> {0}"
 play_3 : "๏ ғᴀɪʟᴇᴅ ᴛᴏ ᴘʀᴏᴄᴇss ǫᴜᴇʀʏ."
 play_4 : "<b>๏ ᴀᴅᴍɪɴs ᴏɴʟʏ ᴘʟᴀʏ</b>\n๏ ᴏɴʟʏ ᴀᴅᴍɪɴs ᴏғ ᴛʜɪs ᴄʜᴀᴛ ᴀʀᴇ ᴀʟʟᴏᴡᴇᴅ ᴛᴏ ᴘʟᴀʏ\n\nᴄʜᴀɴɢᴇ ᴘʟᴀʏ ᴍᴏᴅᴇ ᴠɪᴀ /playmode"
@@ -200,26 +200,26 @@ str_2 : "๏ ᴠᴀʟɪᴅ sᴛʀᴇᴀᴍ ᴠᴇʀɪғɪᴇᴅ.\n\n๏ ᴘʀᴏ
 str_3 : "๏ ғᴀɪʟᴇᴅ ᴛᴏ sᴛʀᴇᴀᴍ ʏᴏᴜᴛᴜʙᴇ ʟɪᴠᴇ sᴛʀᴇᴀᴍ, ɴᴏ ʟɪᴠᴇ ꜰᴏʀᴍᴀᴛ ꜰᴏᴜɴᴅ."
 
 ping_1 : "๏ {0} ɪs ᴘɪɴɢɪɴɢ..."
-ping_2 : "Ⰶ ʏᴜᴍᴇᴋᴏ ᴘɪɴɢ ᴩᴏɴɢ ➠ <code>{0}ᴍs</code> Ⰶ\n\n✦ <b>{1} sʏsᴛᴇᴍ sᴛᴀᴛs</b> ✦\n\n๏ ᴜᴩᴛɪᴍᴇ ➠ {2}\n๏ ʀᴀᴍ ➠ {3}\n๏ ᴄᴩᴜ ➠ {4}\n๏ ᴅɪsᴋ ➠ {5}\n๏ ᴩʏ-ᴛɢᴄᴀʟʟs ➠ <code>{6}ᴍs</code>"
+ping_2 : "Ⰶ ᴅʀɪғᴛᴇʀ ᴘɪɴɢ ᴩᴏɴɢ ➠ <code>{0}ᴍs</code> Ⰶ\n\n✦ <b>{1} sʏsᴛᴇᴍ sᴛᴀᴛs</b> ✦\n\n๏ ᴜᴩᴛɪᴍᴇ ➠ {2}\n๏ ʀᴀᴍ ➠ {3}\n๏ ᴄᴩᴜ ➠ {4}\n๏ ᴅɪsᴋ ➠ {5}\n๏ ᴩʏ-ᴛɢᴄᴀʟʟs ➠ <code>{6}ᴍs</code>"
 
 queue_1 : "๏ ғᴇᴛᴄʜɪɴɢ ǫᴜᴇᴜᴇ...\n\n๏ ᴘʟᴇᴀsᴇ ᴡᴀɪᴛ..."
 queue_2 : "๏ ǫᴜᴇᴜᴇ ᴇᴍᴘᴛʏ."
 queue_3 : "<u>๏ ᴄʟɪᴄᴋ ʜᴇʀᴇ ᴛᴏ ᴄʜᴇᴄᴋ ᴛʜᴇ ʟɪsᴛ ᴏғ ᴛʜᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋs ➠ </u> <a href={0}>ʜᴇʀᴇ</a>"
-queue_4 : "Ⰶ <b>ᴀᴅᴅᴇᴅ ᴛᴏ ǫᴜᴇᴜᴇ ᴀᴛ Gᴀʀᴏᴜ ᴍᴜsɪᴄ #{0}\n\n๏ ᴛɪᴛʟᴇ ➠ </b> {1}\n<b>๏ ᴅᴜʀᴀᴛɪᴏɴ ➠ </b> {2} ᴍɪɴᴜᴛᴇs\n<b>๏ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➠</b> {3}\n\n๏ ᴍᴀᴅᴇ ʙʏ ➛ ʏᴜᴍᴇᴋᴏ-Sᴜᴘᴘᴏʀᴛ"
+queue_4 : "Ⰶ <b>ᴀᴅᴅᴇᴅ ᴛᴏ ǫᴜᴇᴜᴇ ᴀᴛ ᴅʀɪғᴛᴇʀ ᴍᴜsɪᴄ #{0}\n\n๏ ᴛɪᴛʟᴇ ➠ </b> {1}\n<b>๏ ᴅᴜʀᴀᴛɪᴏɴ ➠ </b> {2} ᴍɪɴᴜᴛᴇs\n<b>๏ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➠</b> {3}\n\n๏ ᴍᴀᴅᴇ ʙʏ ➛ ʏᴜᴍᴇᴋᴏ-Sᴜᴘᴘᴏʀᴛ"
 queue_5 : "๏ ᴛʜᴇʀᴇ's ᴏɴʟʏ ᴏɴᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋ ɪɴ ᴘʟᴀʏʟɪsᴛ.\n\n๏ ᴀᴅᴅ ᴍᴏʀᴇ ᴛʀᴀᴄᴋs ᴛᴏ ᴄʜᴇᴄᴋ ʟɪsᴛ."
 queue_6 : "<b>๏ ᴅᴜʀᴀᴛɪᴏɴ ➠ </b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴀᴛɪᴏɴ sᴛʀᴇᴀᴍ\n\n๏ ᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_7 : "\n๏ ᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_8 : "๏ <b>{0} ᴘʟᴀʏᴇʀ</b>\n\n๏ <b>sᴛʀᴇᴀᴍɪɴɢ ➠ </b> {1}\n\n๏ <b>sᴛʀᴇᴀᴍ ᴛʏᴘᴇ ➠ </b> {2}\n๏ <b>ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➠ </b> {3}\n{4}"
 
-stream_1 : "Ⰶ <b>ʏᴜᴍᴇᴋᴏ ᴍᴜsɪᴄ sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ Ⰶ</b>\n\n<b>๏ ᴛɪᴛʟᴇ ➛ </b> <a href={0}>{1}</a>\n<b>๏ ᴅᴜʀᴀᴛɪᴏɴ ➛ </b> {2} ᴍɪɴᴜᴛᴇs\n<b>๏ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➛ </b> {3}\n\n๏ ᴍᴀᴅᴇ ʙʏ ➛ [ʏᴜᴍᴇᴋᴏ-ᴜᴘᴅᴀᴛᴇs](https://t.me/ix_updates)"
-stream_2 : "Ⰶ <b>ʏᴜᴍᴇᴋᴏ ᴍᴜsɪᴄ sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ Ⰶ</b>\n\n<b>๏ sᴛʀᴇᴀᴍ ᴛʏᴘᴇ ➛ </b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>๏ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➛ </b> {0}\n\n๏ ᴍᴀᴅᴇ ʙʏ ➛ [ʏᴜᴍᴇᴋᴏ-ᴜᴘᴅᴀᴛᴇs](https://t.me/ix_updates)"
+stream_1 : "Ⰶ <b>ᴅʀɪғᴛᴇʀ ᴍᴜsɪᴄ sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ Ⰶ</b>\n\n<b>๏ ᴛɪᴛʟᴇ ➛ </b> <a href={0}>{1}</a>\n<b>๏ ᴅᴜʀᴀᴛɪᴏɴ ➛ </b> {2} ᴍɪɴᴜᴛᴇs\n<b>๏ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➛ </b> {3}\n\n๏ ᴍᴀᴅᴇ ʙʏ ➛ [ʏᴜᴍᴇᴋᴏ-ᴜᴘᴅᴀᴛᴇs](https://t.me/ix_updates)"
+stream_2 : "Ⰶ <b>ᴅʀɪғᴛᴇʀ ᴍᴜsɪᴄ sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ Ⰶ</b>\n\n<b>๏ sᴛʀᴇᴀᴍ ᴛʏᴘᴇ ➛ </b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>๏ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➛ </b> {0}\n\n๏ ᴍᴀᴅᴇ ʙʏ ➛ [ʏᴜᴍᴇᴋᴏ-ᴜᴘᴅᴀᴛᴇs](https://t.me/ix_updates)"
 
 CLOSE_BUTTON  : "ᴄʟᴏsᴇ"
 BACK_BUTTON : "ʙᴀᴄᴋ"
 
 S_B_1 : "ᴀᴅᴅ ᴍᴇ"
 S_B_2 : "sᴜᴘᴘᴏʀᴛ"
-S_B_3 : "ᴀᴅᴅ ᴍᴇ ʙᴀʙʏ"
+S_B_3 : "ᴀᴅᴅ ᴍᴇ sᴏʟᴅɪᴇʀ"
 S_B_4 : "ʜᴇʟᴘ ᴄᴏᴍᴍᴀɴᴅs"
 S_B_5 : "ᴏᴡɴᴇʀ"
 S_B_6 : "sᴜᴘᴘᴏʀᴛ"
